--- a/src/samples/GesturePressAndTap.mxml
+++ b/src/samples/GesturePressAndTap.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 title="{data.name}">
 
-  <fx:Script>
+    <fx:Script>
 		import spark.components.Label;
 	</fx:Script>
 
@@ -15,4 +17,4 @@
 
 	<s:Image id="img" source="@Embed('air-logo.jpg')"/>
 
-</s:Group>
+</s:View>
