--- a/src/samples/GestureSwipe.mxml
+++ b/src/samples/GestureSwipe.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
 
   <fx:Script>
 		import flash.events.TransformGestureEvent;
@@ -16,21 +17,21 @@
 		}
 
 		addEventListener(TransformGestureEvent.GESTURE_SWIPE, function(event:TransformGestureEvent):void {
-      if (event.offsetX == 1 ) {
-        l.text = "right";
-      }
-      else if (event.offsetX == -1 ) {
-        l.text = "left";
-      }
-      else if (event.offsetY == 1) {
-        l.text = "down";
-      }
-      else if (event.offsetY == -1) {
-        l.text = "up";
-      }
+	        if (event.offsetX == 1 ) {
+	            l.text = "right";
+	        }
+	        else if (event.offsetX == -1 ) {
+	            l.text = "left";
+	        }
+	        else if (event.offsetY == 1) {
+	            l.text = "down";
+	        }
+	        else if (event.offsetY == -1) {
+	            l.text = "up";
+	        }
 		});
 	</s:creationComplete>
 
 	<s:Label id="l" paddingTop="20" text="Swipe one finger on the screen"/>
 
-</s:Group>
+</s:View>
