--- a/src/samples/GestureZoom.mxml
+++ b/src/samples/GestureZoom.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
 	
 	<fx:Script>
 		import flash.events.TransformGestureEvent;
@@ -26,4 +27,4 @@
 	
 	<s:Image id="img" source="@Embed('air-logo.jpg')"/>
 	
-</s:Group>
+</s:View>
