--- a/src/samples/MultipleTouchPoints.mxml
+++ b/src/samples/MultipleTouchPoints.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
-         xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+         xmlns:s="library://ns.adobe.com/flex/spark"
+		 title="{data.name}" xmlns:local="*">
 
   <fx:Script>
     import mx.core.UIComponent;
@@ -63,4 +64,4 @@
 
   <s:Label id="l" paddingTop="10"/>
 
-</s:Group>
+</s:View>
