--- a/src/samples/NativeAppIntegration.mxml
+++ b/src/samples/NativeAppIntegration.mxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
 		xmlns:s="library://ns.adobe.com/flex/spark"
-    paddingTop="20" paddingLeft="20" paddingRight="20">
-
-  <s:TileGroup columnWidth="150" verticalGap="30" horizontalGap="30">
+		title="{data.name}">
+	
+	<s:layout>
+		<s:TileLayout columnWidth="150" verticalGap="30" horizontalGap="30"/>
+	</s:layout>
+	
     <s:Button label="Email" click="navigateToURL(new URLRequest('mailto:foo@bar.com'))"/>
     <s:Button label="Browser" click="navigateToURL(new URLRequest('http://www.flex.org'))"/>
     <s:Button label="Maps" click="navigateToURL(new URLRequest('http://maps.google.com/'))"/>
     <s:Button label="Phone" click="navigateToURL(new URLRequest('tel:1234567890'))"/>
     <s:Button label="SMS" click="navigateToURL(new URLRequest('sms:1234567890'))"/>
-  </s:TileGroup>
 
-</s:VGroup>
+</s:View>
