--- a/src/samples/NativeCameraUI.mxml
+++ b/src/samples/NativeCameraUI.mxml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:s="library://ns.adobe.com/flex/spark"
-     paddingTop="20" paddingLeft="20" paddingRight="20">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
+	
+	<s:layout>
+		<s:VerticalLayout/>
+	</s:layout>
 	
 	<s:Button label="Snap photo">
 		<s:click>
@@ -24,4 +28,4 @@
 
 	<s:Image id="i" width="100%" height="100%"/>
 	
-</s:VGroup>
+</s:View>
