--- a/src/samples/RawCamera.mxml
+++ b/src/samples/RawCamera.mxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-        paddingTop="10">
+		 title="{data.name}">
 	
-	<s:creationComplete>
+	<s:layout>
+		<s:VerticalLayout/>
+	</s:layout>
+	
+	<s:viewActivate>
 		if (Camera.isSupported)
 		{
 			var v:Video = new Video(width, height);
@@ -17,9 +21,9 @@
 		{
 			l.text = "Camera not supported";
 		}
-	</s:creationComplete>
+	</s:viewActivate>
 	
 	<s:Label id="l" text="Camera orientation not accounted for!"/>
 	<mx:UIComponent id="uic" width="100%" height="100%"/>
 	
-</s:VGroup>
+</s:View>
