--- a/src/samples/SimpleDB.mxml
+++ b/src/samples/SimpleDB.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
-          xmlns:s="library://ns.adobe.com/flex/spark" paddingTop="20" paddingLeft="20" paddingRight="20" paddingBottom="20">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+          xmlns:s="library://ns.adobe.com/flex/spark"
+		  title="{data.name}">
 
   <fx:Script>
     import mx.collections.ArrayCollection;
@@ -15,6 +16,10 @@
       l.dataProvider = new ArrayCollection(stmt.getResult().data);
     }
   </fx:Script>
+	
+	<s:layout>
+		<s:VerticalLayout/>
+	</s:layout>
 
   <s:creationComplete>
       sqlConnection = new SQLConnection();
@@ -45,4 +50,4 @@
 
   <s:List id="l" width="100%" height="100%"/>
 
-</s:VGroup>
+</s:View>
