--- a/src/samples/SimpleIconItemRenderer.mxml
+++ b/src/samples/SimpleIconItemRenderer.mxml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
 
   <s:List width="100%" height="100%">
     <s:dataProvider>
@@ -32,4 +34,4 @@
     </s:change>
   </s:List>
 
-</s:Group>
+</s:View>
