--- a/src/samples/SimpleLabelItemRenderer.mxml
+++ b/src/samples/SimpleLabelItemRenderer.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 title="{data.name}">
 	
 	<s:List width="100%" height="100%">
 		<s:dataProvider>
@@ -33,4 +34,4 @@
 		</s:itemRenderer>
 	</s:List>
 	
-</s:Group>
+</s:View>
