--- a/src/samples/SimpleList.mxml
+++ b/src/samples/SimpleList.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
 	
 	<s:List width="100%" height="100%">
 		<s:dataProvider>
@@ -21,4 +22,4 @@
 		</s:dataProvider>
 	</s:List>
 	
-</s:Group>
+</s:View>
