--- a/src/samples/SimpleRadioButton.mxml
+++ b/src/samples/SimpleRadioButton.mxml
@@ -1,13 +1,19 @@
 <?xml version="1.0"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" paddingTop="20" paddingLeft="20" paddingRight="20">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
 
-  <fx:Declarations>
-    <s:RadioButtonGroup id="rbg"/>
-  </fx:Declarations>
+    <fx:Declarations>
+        <s:RadioButtonGroup id="rbg"/>
+    </fx:Declarations>
+	
+	<s:layout>
+		<s:VerticalLayout/>
+	</s:layout>
 
-  <s:RadioButton label="YES" groupName="rbg"/>
-  <s:RadioButton label="NO" groupName="rbg"/>
+    <s:RadioButton label="YES" groupName="rbg"/>
+    <s:RadioButton label="NO" groupName="rbg"/>
 
-  <s:Label text="You selected: {rbg.selectedValue}"/>
+    <s:Label text="You selected: {rbg.selectedValue}"/>
 
-</s:VGroup>
+</s:View>
