--- a/src/samples/SimpleSlider.mxml
+++ b/src/samples/SimpleSlider.mxml
@@ -2,13 +2,12 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  title="{data.name}">
-
+	
 	<s:layout>
 		<s:VerticalLayout/>
 	</s:layout>
-	
-    <s:TextInput id="ti" width="100%" prompt="Type something"/>
 
-    <s:Label text="You entered: {ti.text}" paddingTop="20"/>
+    <s:HSlider id="hs" width="100%" minimum="0" maximum="10"/>
+    <s:Label text="{hs.value}" fontSize="32"/>
 
 </s:View>
