--- a/src/samples/SimpleTextArea.mxml
+++ b/src/samples/SimpleTextArea.mxml
@@ -1,9 +1,15 @@
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" paddingTop="20" paddingLeft="20" paddingRight="20">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
+	
+	<s:layout>
+		<s:VerticalLayout/>
+	</s:layout>
 
-  <s:Label text="Type something:"/>
+    <s:Label text="Type something:"/>
 
-  <s:TextArea id="ti" width="100%" height="150"/>
+    <s:TextArea id="ti" width="100%" height="150"/>
 
-  <s:Label text="You entered: {ti.text}" width="100%" paddingTop="20"/>
+    <s:Label text="You entered: {ti.text}" width="100%" paddingTop="20"/>
 
-</s:VGroup>
+</s:View>
