--- a/src/TourDeMobileFlex.mxml
+++ b/src/TourDeMobileFlex.mxml
@@ -40,7 +40,7 @@
 			// annonymously ping the tdf server about the sample being viewed
 			var urlVariables:URLVariables = new URLVariables();
 			urlVariables.Request = "logView";
-			urlVariables.ObjectId = 0; //.uid;
+			urlVariables.ObjectId = sampleItem.uid;
 			
 			var urlRequest:URLRequest = new URLRequest("http://tourdeflex.adobe.com/server/main.php");
 			urlRequest.method = URLRequestMethod.POST;
