--- a/src/views/SampleListView.mxml
+++ b/src/views/SampleListView.mxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark">
-	
+	<fx:Metadata>
+		[Event(name="showView", type="events.ShowViewEvent")]
+	</fx:Metadata>
 	<fx:Script>
 		<![CDATA[
-		import spark.components.Label;
-		import spark.primitives.BitmapImage;
+			import events.ShowViewEvent;
+			
+			import spark.components.Button;
+			import spark.primitives.BitmapImage;
 			
 		[Bindable]
 		private var sampleCategory:SampleCategory;
@@ -27,6 +31,15 @@
 					titleDisplayComponent.text = sampleCategory.name;
 					titleContent.push(titleDisplayComponent);
 				}
+				
+				if (navigator.length>1) {
+					var bb:Button = new Button();
+					bb.label = "Back";
+					bb.addEventListener(MouseEvent.CLICK, function(event:MouseEvent):void {
+						navigator.popView();
+					});
+					navigationContent = [bb];					
+				}
 			}
 		}
 			
@@ -38,8 +51,13 @@
 	</fx:Script>
 	
 	<s:List id="l" width="100%" height="100%" dataProvider="{sampleCategory.samples}" itemRenderer="SampleItemRenderer">
-		<s:change>
-			navigator.pushView(l.selectedItem.resource, l.selectedItem);
+		<s:change>			
+			if (l.selectedItem is SampleCategory) { 
+				navigator.pushView(l.selectedItem.resource, l.selectedItem);
+			} else { // FIXME: do this only if parent is splitview else just pushView
+				var showViewEvent:ShowViewEvent = new ShowViewEvent(ShowViewEvent.SHOW_VIEW, l.selectedItem.resource,l.selectedItem);
+				dispatchEvent(showViewEvent);
+			}
 		</s:change>
 	</s:List>
 	
