--- a/src/views/SplitView.mxml
+++ b/src/views/SplitView.mxml
@@ -47,7 +47,7 @@
 		]]>
 	</fx:Script>
 	<s:ViewNavigator  id="categoryNavigator" width="350"  height="100%"  
-					  firstView="{Categories.topLevel.resource}"
+					  firstView="views.TabbedView"
 					  firstViewData="{Categories.topLevel}"/>
 	<s:ViewNavigator id="viewNavigator" width="100%" height="100%"  >
 		<s:navigationContent.portrait>
