--- a/src/TourDeMobileSplitView.mxml
+++ b/src/TourDeMobileSplitView.mxml
@@ -2,7 +2,10 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
 			   xmlns:views="views.*"
-			   applicationDPI="240" >
+			   applicationDPI="240"
+			   splashScreenImage="@Embed('icons/tdfsplash.png')"
+			   resizeForSoftKeyboard="true"			   
+			   creationComplete="creationCompleteHandler(event)">
 	<fx:Style>
 		@namespace s "library://ns.adobe.com/flex/spark";
 		
@@ -19,7 +22,11 @@
 
 	<fx:Script>
 		<![CDATA[
+			import events.ShowViewEvent;
 			import events.ViewNavigatorEvent;
+			
+			import mx.events.FlexEvent;
+			
 			import spark.components.Button;
 			import spark.components.Label;
 			
@@ -51,8 +58,21 @@
 				});
 				urlLoader.load(urlRequest);
 			}
+			
+			protected function creationCompleteHandler(event:FlexEvent):void
+			{
+				this.addEventListener(ShowViewEvent.SHOW_VIEW, showView);
+			}
+			
+			protected function showView(event:ShowViewEvent):void
+			{
+				if (splitView.viewNavigator.length>0)
+					splitView.viewNavigator.popAll();
+				
+				splitView.viewNavigator.pushView(event.view, event.data);
+			}			
 		]]>
 	</fx:Script>	
 	
-	<views:SplitView width="100%" height="100%"  viewChanged="viewChanged(event)" />
+	<views:SplitView id="splitView" width="100%" height="100%"  viewChanged="viewChanged(event)" />
 </s:Application>
