--- a/src/samples/CensusRemoting.mxml
+++ b/src/samples/CensusRemoting.mxml
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		title="{data.name}">
+	<s:layout>
+		<s:VerticalLayout />
+	</s:layout>
 
   <fx:Declarations>
     <s:RemoteObject id="ro" destination="census" endpoint="http://www.jamesward.com/census2-tests/messagebroker/amf?id=flex_amf3&amp;gzip=true">
@@ -75,4 +80,4 @@
     </s:columns>
   </s:DataGrid>
 
-</s:VGroup>
+</s:View>
