--- a/src/views/TabbedView.mxml
+++ b/src/views/TabbedView.mxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:local="*"
 		actionBarVisible="false"
 		>
 	<s:SkinnableContainer width="100%" height="65" backgroundColor="black" /> 
 	<s:TabbedViewNavigator width="100%" height="100%">
-		
-		<local:SampleViewNavigator id="categories" label="Categories" width="100%" height="100%" 
+		<s:ViewNavigator id="categories" label="Categories" width="100%" height="100%" 
 								   firstView="{Categories.topLevel.resource}" 
 								   firstViewData="{Categories.topLevel}" />
 		
-		<local:SampleViewNavigator id="search" label="Search" width="100%" height="100%" 
+		<s:ViewNavigator id="search" label="Search" width="100%" height="100%" 
 								   firstView="views.SearchView" />
 		
 	</s:TabbedViewNavigator>	
