--- a/src/views/WelcomeView.mxml
+++ b/src/views/WelcomeView.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" title="WelcomeView">
+		xmlns:s="library://ns.adobe.com/flex/spark" title="Welcome!">
 	<s:layout>
 		<s:HorizontalLayout verticalAlign="middle" horizontalAlign="center"/>
 	</s:layout>
